src/duckdb/snapshots/datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_2.snap
---
source: src/duckdb/creator.rs
expression: explain_result
---
┌─────────────────────────────────────┐
│┌───────────────────────────────────┐│
││    Query Profiling Information    ││
│└───────────────────────────────────┘│
└─────────────────────────────────────┘
EXPLAIN ANALYZE SELECT name, status FROM test_table WHERE id = 1
┌────────────────────────────────────────────────┐
│┌──────────────────────────────────────────────┐│
││              Total Time: replaced             ││
│└──────────────────────────────────────────────┘│
└────────────────────────────────────────────────┘
┌───────────────────────────┐
│           QUERY           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      EXPLAIN_ANALYZE      │
│    ────────────────────   │
│           0 Rows          │
│          (0.00s)          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│            name           │
│           status          │
│                           │
│           1 Rows          │
│          (0.00s)          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         TABLE_SCAN        │
│    ────────────────────   │
│           Table:          │
│__data_test_table_redacted│
│     redacted     │
│                           │
│      Type: Index Scan     │
│                           │
│        Projections:       │
│           status          │
│            name           │
│                           │
│       Filters: id=1       │
│                           │
│           1 Rows          │
│          (0.00s)          │
└───────────────────────────┘
